# suvoda-agent-arch

./: README.md  harness-repo-structure (1).md  suvoda-workshop-narrative.html
greeting-service/: .gitignore  AGENTS.md  README.md  pyproject.toml
greeting-service/.claude/commands/: review-pr.md  run-evals.md
greeting-service/.github/workflows/: ci.yml  eval_gate.yml  nightly_drift.yml
greeting-service/docs/architecture/: invariants.md  multi-agent-orchestration.md  overview.md
greeting-service/docs/runbooks/: deploy.md  rollback.md
greeting-service/docs/specs/: 001-hello-endpoint.md  template.md
greeting-service/docs/validation/: traceability-matrix.md
greeting-service/evals/: __init__.py
greeting-service/evals/datasets/: code_quality.jsonl  regression_cases.jsonl  spec_compliance.jsonl
greeting-service/evals/rubrics/: code_review.md  spec_compliance.md
greeting-service/evals/runners/: llm_judge.py  rubric_eval.py
greeting-service/harness/: __init__.py
greeting-service/harness/control/: README.md  __init__.py  orchestration.yaml  run_demo_pipeline.py  run_showcase_pipeline.py
greeting-service/harness/guides/: README.md
greeting-service/harness/observability/: logs_config.yaml  trace_schema.json
greeting-service/harness/sensors/: __init__.py
greeting-service/src/: __init__.py  formats.py  greeter.py  main.py
greeting-service/tests/: __init__.py
greeting-service/tests/integration/: test_endpoint.py
greeting-service/tests/properties/: __init__.py  test_invariants.py
greeting-service/tests/unit/: test_demo_pipeline.py  test_formats.py  (+3 more)
(+23 files in other folders)
