[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "greeting-service-demo"
version = "0.1.0"
description = "Minimal workshop demo for agentic development architecture"
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
greeting-service = "src.main:main"
greeting-service-demo-pipeline = "harness.control.run_demo_pipeline:main"

[tool.setuptools.packages.find]
include = ["src", "src.*", "harness", "harness.*"]
